@@ -1,6 +1,9 @@
 SUBDIRS = \
-	prpltwtr \
-	gtkprpltwtr
+	prpltwtr
+
+if WITH_PIDGIN
+SUBDIRS += gtkprpltwtr
+endif
 
 EXTRA_DIST =\
 	Makefile.mingw
